ready for deployment

--- a/index.html
+++ b/index.html
@@ -340,6 +340,7 @@
                         <textarea id="message" rows="5" placeholder="Your Message" required></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary">Send Message</button>
+                    <p id="email-success" style=" color: green;"></p>
                 </form>
             </div>
         </div>
